# osuscrob

./: .gitignore  README.md  osu_scrob.py  pyproject.toml
.github/workflows/: test.yml
osuscrob/: __init__.py  main.py  osuscrob.py  test_osuscrob.py  ui.py
