[tool.poetry]
name = "osuscrob"
version = "0.1.0"
description = ""
authors = ["Jakob Ruckel <jakob@ruckel.de>"]
license = "GPL-3.0-or-later"
readme = "README.md"
packages = [{include = "osuscrob"}]

[tool.poetry.scripts]
osuscrob = "osuscrob.osuscrob:main"

[tool.poetry.dependencies]
python = "^3.11"
pylast = "^5.2.0"
python-dateutil = "^2.8.2"
pyyaml = "^6.0.1"
httpcore = ">=1.0.8"
requests = "^2.31.0"
ossapi = "^3.4.3"
platformdirs = "^4.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=9.0.2,<10.0.0)"
]
